tests/res/has/error_scalar.say
say d = { x: 1 };
d has "x"; // error: `has` needs a type name, a shape, or an array; for key presence use `{ k: _ }`, for equality use `==`
